--- a/projects.json
+++ b/projects.json
@@ -14,6 +14,13 @@
 	 "year": "2019_WS",
 	 "info": "EmptyInfo2",
 	 "status": 0
+    },
+    {
+	 "title": "TowerDefense",
+	 "folder": "TowerDefense",
+	 "author": "Sevdev",
+	 "year": "2019_WS",
+	 "status": 1
     }
    
      	 
