--- a/projects.json
+++ b/projects.json
@@ -21,6 +21,13 @@
 	 "author": "Sevdev",
 	 "year": "2019_WS",
 	 "status": 1
+    },
+	{
+	 "title": "AbaloneGameV2",
+	 "folder": "AbaloneV2_WebGL",
+	 "author": "Manuel",
+	 "year": "2019_WS",
+	 "status": 0
     }
    
      	 
