--- a/projects.json
+++ b/projects.json
@@ -28,6 +28,13 @@
 	 "author": "Manuel",
 	 "year": "2019_WS",
 	 "status": 0
+    },
+	{
+	 "title": "Crusade",
+	 "folder": "Crusade",
+	 "author": "Fabian",
+	 "year": "2019_WS",
+	 "status": 0
     }
    
      	 
