--- a/projects.json
+++ b/projects.json
@@ -28,6 +28,13 @@
 	 "author": "Manuel",
 	 "year": "2019_WS",
 	 "status": 0
+    },
+	{
+	 "title": "Tetris2Player",
+	 "folder": "2PlayerTetris-WebGLBuild",
+	 "author": "Philipp Seiringer, Patrick Gabriel",
+	 "year": "2019_WS",
+	 "status": 0
     }
    
      	 
