--- a/projects.json
+++ b/projects.json
@@ -1,10 +1,10 @@
 [  
     {
-	 "title": "emptytitle",
-	 "folder": "emptyFolder",
-	 "author": "emptyName",
+	 "title": "TowerDefense",
+	 "folder": "BetterTowerDefense",
+	 "author": "Julian Kronlachner",
 	 "year": "2019_WS",
-	 "info": "EmptyInfo",
+	 "info": "TowerDefense Game with unlimited lives",
 	 "status": 0
     },
     {
