--- a/projects.json
+++ b/projects.json
@@ -35,6 +35,13 @@
 	 "author": "Philipp Seiringer, Patrick Gabriel",
 	 "year": "2019_WS",
 	 "status": 0
+    },
+	{
+	 "title": "TankGame",
+	 "folder": "TankGame",
+	 "author": "Sven Vucak",
+	 "year": "2019_WS",
+	 "status": 0
     }
    
      	 
