added cybertruck racing

--- a/projects.json
+++ b/projects.json
@@ -1,4 +1,11 @@
-[  
+[
+    {
+    "title": "CybertruckRacing",
+    "folder": "CybertruckRacing",
+    "author": "Paul Wiesinger",
+    "year": "2019_WS",
+    "status": 0
+   },
     {
 	 "title": "TowerDefense",
 	 "folder": "BetterTowerDefense",
