--- a/projects.json
+++ b/projects.json
@@ -37,7 +37,7 @@
     "status": 0
   },
   {
-    "title": "Untitle Zombie Game",
+    "title": "Untitled Zombie Game",
     "folder": "Untitled Zombie Game",
     "author": "Lukas Foro",
     "year": "2019_WS",
