--- a/projects.json
+++ b/projects.json
@@ -70,5 +70,10 @@
     "author": "Max Grubauer",
     "year": "2019_WS",
     "status": -1
-  }
+  },
+      "title": "RglLike_WebGL",
+    "folder": "RglLike_WebGL",
+    "author": "David Engelberger",
+    "year": "2019_WS",
+    "status": 0
 ]
