added PAC-MAN to project.json

--- a/projects.json
+++ b/projects.json
@@ -127,6 +127,14 @@
     "author": "Lukas Foro",
     "year": "2019_WS",
     "status":  0
+  },
+  {
+    "title": "PAC-MAN",
+    "folder": "Pac-Man",
+    "author": "Lukas Jodlbauer",
+    "year": "2019_WS",
+    "status":  0
   }
+
 
 ]
