Added Endless Runner

--- a/projects.json
+++ b/projects.json
@@ -128,5 +128,11 @@
     "year": "2019_WS",
     "status":  0
   }
-
+  {
+	 "title": "Endless Jump"
+	 "folder": "WebGL_MeinSPiel",
+	 "author": "Matthias Wetzlmayer",
+	 "year": "2019_WS",
+	 "status": 1
+    }
 ]
