--- a/projects.json
+++ b/projects.json
@@ -141,5 +141,25 @@
 	 "author": "Matthias Wetzlmayer",
 	 "year": "2019_WS",
 	 "status": 1
-    }
+    },
+    {
+      "title": "ZombieShooterDingsbums",
+      "folder": "ZombieShooterDingsbums",
+      "author": "Nico Oliver",
+      "year": "2019_WS",
+      "status":  1
+    },
+    {
+       "title": "SuperMario",
+       "folder": "SuperMario",
+       "author": "Benedikt Ortner",
+       "year": "2019_WS",
+       "status":  1
+     },{
+       "title": "GettingOverIt",
+       "folder": "GettingOverIt_Clone",
+       "author": "Raphael Eckmayr",
+       "year": "2019_WS",
+       "status":  -1
+     }
 ]
